@@ -893,7 +893,7 @@ void Btn::read()
   else if (sample && vlongDebounceTime && (buttonState == BTN_STATE_LONG)) {
     if ((millis() - vlongDebounceTime) >= BTN_PRESS_VERYLONG) {
       vlongDebounceTime = 0;
-      g_ERP.setWifiMode(WIFI_MODE_AP_DEFAULT);
+      RapiSetWifiMode(WIFI_MODE_AP_DEFAULT);
     }
   }
 #endif // RAPI
@@ -2207,7 +2207,7 @@ void DelayTimer::PrintTimerIcon(){
 void ProcessInputs()
 {
 #ifdef RAPI
-  g_ERP.doCmd();
+  RapiDoCmd();
 #endif
 #ifdef SERIALCLI
   g_CLI.getInput();
@@ -2237,6 +2237,10 @@ void EvseReset()
 #endif // SERIALCLI
 
   g_OBD.Init();
+
+#ifdef RAPI
+  RapiInit();
+#endif
 
   g_EvseController.Init();
 }
