@@ -99,7 +99,7 @@ SE 0|1 - disable/enable command echo
  $SE 1*0D
  use this for interactive terminal sessions with RAPI.
  RAPI will echo back characters as they are typed, and add a <LF> character
- after its replies
+ after its replies. Valid only over a serial connection, DO NOT USE on I2C
 SF 0|1 - disable/enable GFI self test
  $SF 0*0D
  $SF 1*0E
@@ -207,10 +207,12 @@ class EvseRapiProcessor {
   int8_t tokenCnt;
   char echo;
 
-  int available() { return Serial.available(); }
-  int read() { return Serial.read(); }
-  void write(const char *str) { Serial.write(str); }
-  void write(uint8_t u8) { Serial.write(u8); }
+  virtual int available() = 0;
+  virtual int read() = 0;
+  virtual void writeStart() {}
+  virtual void writeEnd() {}
+  virtual int write(uint8_t u8) = 0;
+  virtual int write(const char *str) = 0;
 
   void reset() {
     buffer[0] = 0;
@@ -224,11 +226,44 @@ class EvseRapiProcessor {
   
 public:
   EvseRapiProcessor();
+
   int doCmd();
   void sendEvseState();
   void setWifiMode(uint8_t mode); // WIFI_MODE_xxx
+
+  virtual void init();
 };
 
-extern EvseRapiProcessor g_ERP;
+
+class EvseSerialRapiProcessor : public EvseRapiProcessor {
+  int available() { return Serial.available(); }
+  int read() { return Serial.read(); }
+  int write(const char *str) { return Serial.write(str); }
+  int write(uint8_t u8) { return Serial.write(u8); }
+
+public:
+  EvseSerialRapiProcessor();
+  void init();
+};
+
+#ifdef RAPI_I2C
+class EvseI2cRapiProcessor : public EvseRapiProcessor {
+  int available() { return Wire.available(); }
+  int read() { return Wire.read(); }
+  void writeStart() { Wire.beginTransmission(RAPI_I2C_REMOTE_ADDR); }
+  void writeEnd() { Wire.endTransmission(); }
+  int write(const char *str) { return Wire.write(str); }
+  int write(uint8_t u8) { return Wire.write(u8); }
+
+public:
+  EvseI2cRapiProcessor();
+  void init();
+};
+#endif // RAPI_I2C
+
+void RapiInit();
+void RapiDoCmd();
+void RapiSendEvseState(uint8_t nodupe=1);
+void RapiSetWifiMode(uint8_t mode);
 
 #endif // RAPI
